# math-lang

./: Cargo.toml  test
parser/: Cargo.toml
parser/src/: buffer.rs  lexer.rs  lib.rs  literal.rs  parse.rs
src/: analysis.rs  ast.rs  codegen.rs  main.rs  parsing.rs  run.rs
